2001-02-05  Frank Warmerdam  <warmerdam@pobox.com>

	* Added support for R*4 (Float32) images in SAR_CEOS reader.

2001-01-30  Frank Warmerdam  <warmerdam@pobox.com>

	* core/overview.cpp: Added resampling type of AVERAGE_MP to do
	magnitude preserving averaging.  New functions include
	GDALComputeBandStats() to get mean and standard deviation.

2001-01-26  Frank Warmerdam  <warmerdam@pobox.com>

	* ogr/ogr_srs_esri.cpp: added Transverse Mercator .prj support.

2001-01-24  Frank Warmerdam  <warmerdam@pobox.com>

	* Added support for files with scanlines split across records in the
	ceos2 (SAR_CEOS) reader.

2001-01-22  Frank Warmerdam  <warmerdam@pobox.com>

	* Added alg directory, and GDALComputeMedianCutPCT(), and
	GDALDitherRGB2PCT() functions.

===============================================================================
	
2001-01-22  Frank Warmerdam  <warmerdam@pobox.com>

	* Released gdal 1.1.3 source distributions.

2001-01-20  Frank Warmerdam  <warmerdam@pobox.com>

	* Improved python configure logic so it skips python if there is
	no python makefile.

2001-01-17  Frank Warmerdam  <warmerdam@pobox.com>

	* Added progressive jpeg support (a couple days ago).

	* Added support for processing CODELIST records in NTF reader (as
	used for BL2000 datasets).

2001-01-10  Frank Warmerdam  <warmerdam@pobox.com>

	* Patched GDALDataset::FlushCache() to recover gracefully if papoBands
	  doesn't exist yet matching nBands.

2001-01-09  Frank Warmerdam  <warmerdam@pobox.com>

	* Added GIF driver based on libungif.

2001-01-03  Frank Warmerdam  <warmerdam@pobox.com>

	* Fixed some serious bugs with clean target on windows makefile.
	Now links gdal11.dll with /debug.

	* Erdas Imagine now uses large file API to support 2-4GB files on
	Windows.

	* libtiff now uses large file api (tif_vsi.c) on windows to handle
	2-4GB tiff files. 

	* Added large file API in port/cpl_vsi.h, and implemented for
	Win32 in port/cpl_vsil_win32.c
